Fixed Gist stretching the site
TODO: There is still some screen width gap
which isn't fully responsive

--- a/sass/post-content.scss
+++ b/sass/post-content.scss
@@ -64,6 +64,14 @@
 
 	.gist {
 		max-width: calc(100vw - 4 * 15px);
+
+		@include desktop {
+			max-width: 1110px; // 1170px - 4 * 15px
+		}
+
+		@include wide {
+			max-width: 1540px; // 1600px - 4 * 15px
+		}
 	}
 
 	.rules {
